# uvid

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: cd.yml  ci.yml  docs.yml  release.yml
_rust_api/: crates.js  help.html  settings.html  src-files.js
_rust_api/search.index/: 005ce3b567b2.js  02a7f438d42f.js  06776ecab56d.js  099bdf376bf2.js  168f874fb8.js  187fdab1b5.js  1afe6aadd7.js  1ca77f1f378b.js  1cdfc3ca4643.js  1dfc5210e70b.js  2137b0cf31c6.js  24fe50b477f7.js  26178db38c.js  2701e318307b.js  285b7bce7a9b.js  2923b25b15.js  2b9b077453.js  2caad0772a14.js  2f788e94f4.js  2fe9d04008.js  327ef94ed7.js  33678cf541.js  351ab6d3adfc.js  3691cb3220b6.js  37b94c9043.js  39d6000b6c.js  3af6620afed5.js  3ebd3d214b90.js  43f45fe278.js  49359c5b198c.js  4b1c979b79.js  4bcc05439a40.js  4d152425d7.js  4dd3f1930f.js  4e3024ebdeaf.js  4f1ec0363ca4.js  51c976bcf7e2.js  51e9ee41c78a.js  53686a49bb.js  53a4adac0a.js  (+34 more)
_rust_api/search.index/crateNames/: dfa041ad2a47.js
_rust_api/search.index/desc/: 729c697f5940.js
_rust_api/search.index/entry/: 4e06375f2e.js  7ca475d64105.js
_rust_api/search.index/function/: 4871bec795.js
_rust_api/search.index/generic_inverted_index/: 31e707b29c87.js
_rust_api/search.index/name/: 0e380e9c3d30.js
_rust_api/search.index/normalizedName/: 0993f7dec697.js
_rust_api/search.index/path/: 9d6bba4ac8.js
_rust_api/search.index/type/: 79ff5e3a59.js
_rust_api/src/uvid/: allele_pack.rs.html  assembly.rs.html  hgvs.rs.html  lib.rs.html  store.rs.html  uvid128.rs.html  vcf.rs.html  vcf_passthrough.rs.html
_rust_api/src/uvid/normalize/: algorithm.rs.html  data.rs.html  error.rs.html  mod.rs.html  reference.rs.html  types.rs.html
_rust_api/static.files/SourceSerif4-LICENSE-a2cfd9d5/: index.html
_rust_api/trait.impl/core/clone/: trait.Clone.js
_rust_api/trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
_rust_api/trait.impl/core/convert/: trait.From.js
_rust_api/trait.impl/core/default/: trait.Default.js
_rust_api/trait.impl/core/error/: trait.Error.js
_rust_api/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
_rust_api/trait.impl/core/hash/: trait.Hash.js
_rust_api/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
_rust_api/trait.impl/pyo3/err/: trait.ToPyErr.js
_rust_api/trait.impl/pyo3/type_object/: trait.PyTypeInfo.js
_rust_api/trait.impl/pyo3/types/: trait.DerefToPyAny.js
_rust_api/uvid/: all.html  index.html  sidebar-items.js  struct.AssemblyNotDetectedError.html  struct.ReferenceNotFoundError.html
_rust_api/uvid/allele_pack/: constant.ALLELE_BITS.html  constant.ALLELE_MASK.html  constant.FINGERPRINT_BITS.html  constant.LENGTH_BITS.html  constant.MAX_LENGTH_MODE_LEN.html  constant.MAX_STRING_BASES.html  constant.MODE_BIT_POS.html  constant.PAYLOAD_MASK.html  enum.AlleleDecoded.html  fn.decode_allele.html  fn.decode_base.html  fn.decode_sequence.html  fn.encode_allele.html  fn.encode_base.html  fn.encode_sequence.html  fn.is_string_mode.html  fn.is_valid_dna.html  fn.rabin_fingerprint_dna.html  index.html  sidebar-items.js
_rust_api/uvid/assembly/: constant.CHROMOSOME_NAMES.html  constant.GRCH37_CHROMOSOMES.html  constant.GRCH37_OFFSETS.html  constant.GRCH38_CHROMOSOMES.html  constant.GRCH38_OFFSETS.html  constant.UCSC_CHROMOSOME_NAMES.html  enum.Assembly.html  enum.ContigScheme.html  fn.chr_pos_to_linear.html  fn.chromosomes.html  fn.classify_chrom.html  fn.detect_contig_scheme.html  fn.linear_to_chr_pos.html  fn.offsets.html  fn.validate_position.html  index.html  sidebar-items.js  struct.ChrIndex.html  struct.ChromosomeInfo.html
_rust_api/uvid/hgvs/: enum.CoordinateSystem.html  enum.HgvsError.html  enum.NaEdit.html  fn.detect_assembly.html  fn.hgvs_to_uvid.html  fn.parse.html  fn.uvid_to_hgvs.html  index.html  sidebar-items.js  struct.FormatOptions.html  struct.HgvsVariant.html
_rust_api/uvid/normalize/: index.html  sidebar-items.js
_rust_api/uvid/normalize/algorithm/: fn.normalize.html  index.html
_rust_api/uvid/normalize/data/: fn.data_dir.html  fn.find_reference.html  fn.find_reference_in.html  fn.open_reference_for_assembly.html  fn.open_reference_for_assembly_in.html  index.html  sidebar-items.js
_rust_api/uvid/normalize/error/: enum.NormalizeError.html  enum.ReferenceError.html  (+2 more)
_rust_api/uvid/store/: index.html  sidebar-items.js  struct.SearchResult.html  struct.UvidStore.html
_rust_api/uvid/uvid128/: constant.UVID_NAMESPACE.html  index.html  sidebar-items.js  struct.Uvid128.html  struct.Variant.html
_rust_api/uvid/vcf/: fn.parse_vcf.html  index.html  sidebar-items.js  struct.ParsedVcf.html  struct.SampleRecord.html  struct.SiteRecord.html
_rust_api/uvid/vcf_passthrough/: enum.VcfPassthroughError.html  fn.detect_assembly_from_header.html  fn.vcf_passthrough.html  index.html  sidebar-items.js
cli/: index.html
docs/: cli.md  index.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guide/: bit-layout.md  concepts.md  hgvs.md  index.md  normalization.md  vcf-passthrough.md
docs/reference/: index.md  python-api.md  rust-api.md
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/: index.html
guide/bit-layout/: index.html
guide/concepts/: index.html
guide/hgvs/: index.html
guide/normalization/: index.html
guide/vcf-passthrough/: index.html
python/uvid/: __init__.py  __main__.py  _core.pyi  cli.py  download.py
reference/: index.html
reference/python-api/: index.html
reference/rust-api/: index.html
search/: search_index.json
src/: assembly.rs  hgvs.rs  lib.rs  store.rs  twobit.rs  uvid128.rs  vcf.rs  vcf_passthrough.rs
src/normalize/: algorithm.rs  data.rs  error.rs  mod.rs  reference.rs  tests_gatk.rs  tests_vt.rs  types.rs
stylesheets/: extra.css
test_data/: sample.vcf
tests/python/: test_uvid.py
(+14 files in other folders)
