[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uvid"
version = "0.1.0"
description = "Universal Variant ID - compact 128-bit identifiers for human genetic variation"
readme = "README.md"
authors = [
    { name = "Matt E. Oates", email = "mattoates+support@gmail.com" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["genomics", "bioinformatics", "vcf", "variant", "genetics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9,<1.0",
]

[project.urls]
Homepage = "https://github.com/MattOates/uvid"
Repository = "https://github.com/MattOates/uvid"
Issues = "https://github.com/MattOates/uvid/issues"

[project.scripts]
uvid = "uvid.cli:app"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "uvid._core"
