[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uvid"
version = "0.1.0"
description = "Universal Variant ID - compact 128-bit identifiers for human genetic variation"
readme = "README.md"
authors = [
    { name = "Matt E. Oates", email = "mattoates+support@gmail.com" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["genomics", "bioinformatics", "vcf", "variant", "genetics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9,<1.0",
]

[project.urls]
Homepage = "https://github.com/MattOates/uvid"
Repository = "https://github.com/MattOates/uvid"
Issues = "https://github.com/MattOates/uvid/issues"

[project.scripts]
uvid = "uvid.cli:app"

[project.optional-dependencies]
dev = [
    "maturin",
    "pytest",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs-material>=9.7,<10",
    "mkdocstrings[python]>=0.27",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "uvid._core"

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.ruff]
target-version = "py310"
src = ["python", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"python/uvid/cli.py" = ["B008"]  # typer.Argument/Option in defaults is idiomatic
"tests/**/*.py" = ["E741"]       # ambiguous variable names ok in tests

[tool.mypy]
python_version = "3.10"
mypy_path = "python"
files = ["python", "tests"]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "uvid._core"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_incomplete_defs = false
